# python-project-50

./: .coverage  .coveragerc  .gitignore  4th_step_project2.cast  Makefile  README.md  coverage.xml  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: GH_actions.yml  github_actions_check.yml
gendiff/: cli.py  generate_diff.py  main.py  parser.py  stylish.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code.egg-info/: PKG-INFO
tests/: test_gendiff.py
tests/test_data/: expected_json.txt
