[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
dependencies = [
    "ruff>=0.14.1",
]

[project.scripts]
gendiff = "gendiff.main:main"
